--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,20 +20,20 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       - name: Cache dependencies
-        - uses: actions/checkout@v2
-        - uses: actions/cache@v2
-          env:
-            cache-name: cache-dependencies
-          with:
-          path: |
-            ~/.cargo/.crates.toml
-            ~/.cargo/.crates2.json
-            ~/.cargo/bin
-            ~/.cargo/registry/index
-            ~/.cargo/registry/cache
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ env.cache-name }}-${{ hashFiles('**/Cargo.lock') }}
+        uses: actions/checkout@v2
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-dependencies
+        with:
+        path: |
+          ~/.cargo/.crates.toml
+          ~/.cargo/.crates2.json
+          ~/.cargo/bin
+          ~/.cargo/registry/index
+          ~/.cargo/registry/cache
+          ~/.cargo/git
+          target
+        key: ${{ runner.os }}-cargo-${{ env.cache-name }}-${{ hashFiles('**/Cargo.lock') }}
       - name: Setup Rust
         uses: actions-rs/toolchain@v1
         with:
