--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,9 +19,9 @@ jobs:
           - nightly
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
+      - uses: actions/checkout@v2
       - name: Cache dependencies
-        - uses: actions/checkout@v2
-        - uses: actions/cache@v2
+        uses: actions/cache@v2
           env:
             cache-name: cache-dependencies
           with:
